@@ -1,6 +1,6 @@
 #ifndef VERSION_HPP
 #define VERSION_HPP
-#define PRODUCTVER     0,4,0,163
-#define STRPRODUCTVER  "0,4,0,163"
-#define STRPRODUCTDATE "2012-04-14"
+#define PRODUCTVER     0,4,0,166
+#define STRPRODUCTVER  "0,4,0,166"
+#define STRPRODUCTDATE "2012-04-23"
 #endif // VERSION_HPP
