@@ -4,6 +4,10 @@ TODO:
  * Fixa dependonservice LanManWorkStation (old win)
  * Fix RtlStringFromGUID problem on NT4
 
+2012-04-23 MickeM
+ * Fixed issue with missing performance data via NSCA
+ * Fixed issue with hostnames beeing lowercase
+
 2012-04-12 MickeM
  * Fixed so keys with parents are advanced (in favour of the parent)
  * Fixed so NSClientServer uses the correct default path for its parents (ie. /settings/default)
